[package]
name = "shredlink-benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
bs58 = "0.5"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
indicatif = "0.17"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
shredlink-proto = "0.1.1"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "shredlink"
path = "src/main.rs"